--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.1",
 	"description": "An ESnext spec-compliant `Object.groupBy` shim/polyfill/replacement that works as far down as ES3.",
 	"main": "index.js",
+	"types": "index.d.ts",
 	"exports": {
 		".": "./index.js",
 		"./auto": "./auto.js",
