--- a/package.json
+++ b/package.json
@@ -58,8 +58,9 @@
 		"in-publish": "^2.0.1",
 		"npmignore": "^0.3.1",
 		"nyc": "^10.3.2",
+		"object-inspect": "^1.13.1",
 		"safe-publish-latest": "^2.0.0",
-		"tape": "^5.7.4"
+		"tape": "^5.7.5"
 	},
 	"dependencies": {
 		"array.prototype.filter": "^1.0.3",
